Refactor code: Move duplicate process CSV file logic to util method